# Fresnel-diffraction-rendering

./: CMakeLists.txt  FdrParameters.hpp  README.md
assets/shaders/: fdr.fs  fdr.vs  test.fs
cmake/: defaults.cmake  third_party.cmake
include/FdrWindow/: FdrWindow.hpp
include/FdrWindow/FdrGLFW/: FdrGLFW.hpp
include/FdrWindow/FdrImGui/: FdrImGui.hpp
include/FdrWindow/FdrOpenGLRender/: FdrOpenGLRender.hpp
include/FdrWindow/FdrParameters/: FdrParameters.hpp
src/: main.cpp
src/FdrWindow/: CMakeLists.txt
src/FdrWindow/FdrGLFW/: FdrGLFW.cpp
src/FdrWindow/FdrImGui/: FdrImGui.cpp
src/FdrWindow/FdrOpenGLRender/: FdrOpenGLRender.cpp
src/FdrWindow/FdrParameters/: FdrParameters.cpp
